--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,23 +19,26 @@
     "\n",
     "class LogisticRegression(object):\n",
     "    \n",
-    "    default_tol = 1e-10  # solver tol\n",
+    "    default_tol = 1e-6  # solver tol\n",
     "    default_penalty = 1.0  # coef of the regularization term\n",
     "    _exp_lim = 40  # exp overflow range\n",
     "\n",
     "    def __init__(self, tol=default_tol,\n",
     "                 standardize=True,\n",
     "                 regularization=None,\n",
-    "                 penalty=default_penalty):\n",
+    "                 penalty=default_penalty,\n",
+    "                 random_state=None):\n",
     "        self.tol = tol\n",
     "        self.standardize = standardize\n",
     "        self.penalty = penalty\n",
     "        self.regularization = regularization\n",
+    "        if random_state is not None:\n",
+    "            np.random.seed(random_state)\n",
     "        \n",
     "    def fit(self, X, y):\n",
-    "        self.n_params = len(X[0]) + 1  # include intercept\n",
     "        X_train = self.transform(X, fit=True)\n",
     "        y_train = self.convert_y(y, how=\"to_binary\")\n",
+    "        self.n_params = len(X_train[0])  # include intercept\n",
     "        beta_hat = minimize(self.loss,\n",
     "                            x0=np.zeros(self.n_params),\n",
     "                            method='BFGS',\n",
@@ -86,21 +96,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison with sklearn.linear_model.LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### prepare data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xys = [[[-1, 1, 1],  'a'],\n",
-    "       [[4, 4, 0],   'b'],\n",
-    "       [[2, -1, 2],  'a'],\n",
-    "       [[4, 6, 3],   'b'],\n",
-    "       [[0, 1, 5],   'a'],\n",
-    "       [[5, 7, 4],   'b'],\n",
-    "       [[0, 0, 6],   'a'],\n",
-    "       [[6, 6, 7],   'b'],\n",
-    "       [[-1, -1, 9], 'a'],\n",
-    "       [[7, 4, 8],   'b']]"
+    "import pandas as pd\n",
+    "np.random.seed(271828)\n",
+    "\n",
+    "df = pd.read_csv('test_data/iris.csv')\n",
+    "df = df[df.species != 'virginica'].copy()\n",
+    "df['species'] = (df.species == 'setosa').astype(int)\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "train_x, test_x = df[:len(df)//2], df[len(df)//2:]\n",
+    "train_y, test_y = train_x.pop('species'), test_x.pop('species')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### our implementation"
    ]
   },
   {
@@ -111,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 5.61770794, -4.26112463, -4.2781618 , -0.60273384])"
+       "(1.0, array([ 1.37983133, -0.92529615,  0.73751567, -1.14474046, -1.13799725]))"
       ]
      },
      "execution_count": 3,
@@ -120,9 +150,16 @@
     }
    ],
    "source": [
-    "a = LogisticRegression(regularization='l2')\n",
-    "a.fit(*list(zip(*xys)))\n",
-    "a.beta"
+    "lr1 = LogisticRegression(regularization='l2', penalty=20, random_state=314159)\n",
+    "lr1.fit(train_x, train_y)\n",
+    "1. * (lr1.predict(test_x) == test_y).sum() / len(test_y), lr1.beta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### sklearn result"
    ]
   },
   {
@@ -135,7 +172,9 @@
     {
      "data": {
       "text/plain": [
-       "array(['b', 'a'], dtype='<U1')"
+       "(1.0,\n",
+       " array([5.95950232]),\n",
+       " array([[-0.40899537,  0.72140619, -1.93885596, -0.81819274]]))"
       ]
      },
      "execution_count": 4,
@@ -144,7 +183,12 @@
     }
    ],
    "source": [
-    "a.predict([[8, 5, 0], [0, -1, 10]])"
+    "from sklearn.linear_model import LogisticRegression as sklearnLogisticRegression\n",
+    "\n",
+    "lr0 = sklearnLogisticRegression(fit_intercept=True, penalty='l2', C=1)  # not standardized\n",
+    "lr0.fit(train_x, train_y)\n",
+    "pred_y0 = lr0.predict(test_x)\n",
+    "1. * (lr0.predict(test_x) == test_y).sum() / len(test_y), lr0.intercept_, lr0.coef_"
    ]
   }
  ],
@@ -164,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
