--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -60,12 +60,12 @@
     "        beta = np.array(beta)\n",
     "        Xbeta = (X_train * beta).sum(axis=1)\n",
     "        loglikelihood_p1 = (Xbeta * y_train).sum()\n",
-    "        # loglikelihood_p2 = np.log(1 + np.exp(Xbeta)).sum()\n",
+    "        # loglikelihood_p2 = -np.log(1 + np.exp(Xbeta)).sum()\n",
     "        # may need to approx to avoid overflow\n",
-    "        loglikelihood_p2 = np.sum(np.fromiter((np.log(1 + np.exp(xb)) if xb < self._exp_lim and xb > - self._exp_lim / 2\n",
-    "                                              else xb if xb >= self._exp_lim\n",
-    "                                              else np.exp(xb)\n",
-    "                                              for xb in Xbeta), dtype=float))\n",
+    "        loglikelihood_p2 = -np.sum(np.fromiter((np.log(1 + np.exp(xb)) if xb < self._exp_lim and xb > - self._exp_lim / 2\n",
+    "                                               else xb if xb >= self._exp_lim\n",
+    "                                               else np.exp(xb)\n",
+    "                                               for xb in Xbeta), dtype=float))\n",
     "        loss = - loglikelihood_p1 - loglikelihood_p2\n",
     "        if self.regularization == 'l1':\n",
     "            loss += self.penalty * np.sum(np.abs(beta))\n",
@@ -119,7 +119,6 @@
     "np.random.seed(271828)\n",
     "\n",
     "df = pd.read_csv('test_data/iris.csv')\n",
-    "df = df[df.species != 'virginica'].copy()\n",
     "df['species'] = (df.species == 'setosa').astype(int)\n",
     "df = df.sample(frac=1).reset_index(drop=True)\n",
     "train_x, test_x = df[:len(df)//2], df[len(df)//2:]\n",
@@ -141,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.0, array([ 1.37983133, -0.92529615,  0.73751567, -1.14474046, -1.13799725]))"
+       "(1.0, array([-0.28580334, -0.25264217,  0.26168977, -0.36024665, -0.33702623]))"
       ]
      },
      "execution_count": 3,
@@ -173,8 +172,8 @@
      "data": {
       "text/plain": [
        "(1.0,\n",
-       " array([5.95950232]),\n",
-       " array([[-0.40899537,  0.72140619, -1.93885596, -0.81819274]]))"
+       " array([6.39932254]),\n",
+       " array([[-0.45979489,  0.64929543, -1.99067379, -0.76921295]]))"
       ]
      },
      "execution_count": 4,
@@ -208,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
